# vtbench

./: .gitignore  Crop_results.xlsx  FaultDetectionA_results.xlsx  FaultDetectionA_results_1.xlsx  FruitFlies_results.xlsx  InsectSound_results.xlsx  Makefile  README.md  Transformer.ipynb  Untitled.ipynb  attention_history.pt  base_model_results.xlsx  base_training.py  bayesianoptim_hyperparameter_tuning.py  bayesianoptim_skfoldcv.py  best_hyperparameters.json  best_model.pt  chart_utils.py  cnn.ipynb  cnn_multiclass.ipynb  config.yaml  config_viz.yaml  dataset_viz.ipynb  ensemble_results_dict.json  ensembleconfig.yaml  generate_viz_charts.py  lstm_main.py  main.ipynb  mcCNN_utils.py  model_results.pt  multibcnn_main.py  randomsearch_hyperparameter_tuning.py  requirements.txt  run.ipynb  save_viz_charts.py  script.py  setup.cfg  setup.py  stacking.py  transformer.py  (+8 more)
.ipynb_checkpoints/: best_hyperparameters-checkpoint.json  chart_utils-checkpoint.py  config-checkpoint.yaml  dataset_viz-checkpoint.ipynb  ensemble-checkpoint.py  ensemble_viz-checkpoint.py  ensembleconfig-checkpoint.yaml  lstm_main-checkpoint.py  main-checkpoint.ipynb  multibranchcnn-checkpoint.py  readme-checkpoint.md  run-checkpoint.ipynb  script-checkpoint.py  transformer_hptuning-checkpoint.py  transformer_main-checkpoint.py  viz-checkpoint.ipynb
ensemble/: ensemble.py
individual_chart_viz/: config_viz.yaml  generate_viz_charts.py  save_viz_charts.py
notebooks/: LSTM.ipynb  Transformer.ipynb  cnn.ipynb  cnnbar.ipynb
num/: CNN_train.py  CNN_utils.py  data_utils.py  multibranch_train.py  (+4 more)
(+194 files in other folders)
