[metadata]
name = vtbench
version = 0.1.0
description = A time-series visualization chart-based classification package
author = Madhumitha Venkatesan
license = MIT

[options]
packages = find:
install_requires = 

[flake8]
max-line-length = 99
exclude = .tox, .git, __pycache__, .ipynb_checkpoints

[isort]
include_trailing_comma = True
line_length = 99
multi_line_output = 3
not_skip = __init__.py
use_parentheses = True 

[tool:pytest]
collect_ignore = ['setup.py']

[bumpversion]
current_version = 0.1.0
commit = True
tag = True
parse = (?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)
serialize = 
            {major}.{minor}.{patch}

[bumpversion:file:setup.cfg]
search = version = {current_version}
replace = version = {new_version}

[bumpversion:file:vtbench/__init__.py]
search = __version__ = "{current_version}"
replace = __version__ = "{new_version}"

[bdist_wheel]
universal = 1